# lightning-hydra-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: .pre-commit.yaml  ci-checks.yaml  dependabot.yaml  pr-checks.yaml  pytest.yaml
configs/: config.yaml  eval.yaml  predict.yaml  train.yaml
configs/callback/: early_stopping.yaml  model_checkpoint.yaml
configs/data/: example_data.yaml
configs/experiment/: example_experiment.yaml  exp1.yaml
configs/hydra/: default.yaml
configs/logger/: tensorboard.yaml
configs/model/: example_classification_model.yaml  example_model.yaml
configs/params_search/: example_optuna.yaml
configs/trainer/: base.yaml  cpu.yaml  ddp.yaml  deepspeed.yaml  default.yaml  gpu.yaml
scripts/: train.py
src/: eval.py  predict.py  train.py
src/callbacks/: metric_evaluator.py
src/data/example_data/: cifar10_datamodule.py  cifar10_dataset.py  lightning_datamodule.py  mnist_datamodule.py  mnist_dataset.py  torch_dataset.py
src/model/example_classification_model/: lightning_module.py  timm_model.py  torch_model.py
src/model/example_model/: lightning_module.py  torch_model.py
src/utils/: __init__.py  hydra_utils.py  logger_utils.py  pred_utils.py
tests/integration/: test_entrypoints.py
tests/utils/: test_hydra_utils.py  test_pred_utils.py
